<resources>
    <string name="app_name" translatable="false">MicroBanker</string>
    <string name="login_email_label">Email Address</string>
    <string name="login_password_label">Password</string>
    <string name="login_login_button_label">Login</string>
    <string name="login_error_email_invalid">Please enter a valid email address</string>
    <string name="login_error_password_empty">Please enter a password</string>
    <string name="login_error_auth_failed">Login Failed. Please check your email / password and try again.</string>
    <string name="login_dialog_message">Logging you in …</string>
    <string name="list_drawer_menu_account">Account</string>
    <string name="list_drawer_menu_account_log_out">Log Out</string>

    <string name="manager">Manager: %s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">#%s</string>
    <string name="no_data_found">No data found</string>
    <string name="add_item">Add Item</string>


    <string name="add_item_name_label">Name</string>
    <string name="add_item_age_label">Age</string>
    <string name="add_item_gender_label">Gender</string>
    <string name="add_item_phone_number_label">Phone Number</string>
    <string name="add_item_manager_label">Manager</string>
    <string name="add_item_photo_label">Photo</string>
    <string name="pick_image">Click to pick an image</string>
    <string name="image_pick_camera">Camera</string>
    <string name="image_pick_gallery">Gallery</string>

    <string name="add_item_error_name_empty">Please enter a name</string>
    <string name="add_item_error_image_empty">Please select a photo</string>
    <string name="add_item_error_age_empty">Please select an age</string>
    <string name="add_item_error_gender_empty">Please select an gender</string>
    <string name="add_item_error_phone_empty">Please enter a phone number</string>
    <string name="add_item_error_manager_empty">Please select an manager</string>
    <string name="select_manager">Select Manager</string>
    <string name="uploading_text">Uploading. Please wait...</string>

</resources>
