<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.metacode.mirobanker.ui.list.AddItemActivity">

                <TextView
                    android:id="@+id/error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/md_red_800"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/photo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/error"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_item_photo_label"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <ImageView
                    android:id="@+id/photo_pick_camera"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/photo_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/photo_pick_gallery"
                    app:srcCompat="@drawable/ic_camera_black"
                    android:tint="@color/md_grey_400"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <ImageView
                    android:id="@+id/photo_pick_gallery"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/photo_pick_camera"
                    app:layout_constraintStart_toEndOf="@id/photo_pick_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_sd_storage_black"
                    android:tint="@color/md_grey_400"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    app:layout_constraintTop_toBottomOf="@id/photo_pick_gallery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:visibility="gone"
                    android:background="@color/md_grey_300" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/photo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/add_item_name_label" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/age_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/age_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/add_item_age_label" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/age_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_item_gender_label"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/gender_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/gender_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/gender_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                </RadioGroup>


                <TextView
                    android:id="@+id/gender_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/gender_group"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/md_red_800"
                    android:visibility="gone" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/gender_error"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/add_item_phone_number_label" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/manager_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/phone_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/manager_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_item_manager_label" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fabSize="normal"
            app:backgroundTint="@color/md_green_500"
            android:tint="@color/md_white_1000"
            app:useCompatPadding="true"
            app:srcCompat="@drawable/ic_check_black_24dp" />

    </android.support.design.widget.CoordinatorLayout>

</layout>
